Add routers, jwt

--- a/src/logging.conf
+++ b/src/logging.conf
@@ -1,5 +1,5 @@
 [loggers]
-keys=root,app
+keys=root,app, routers
 
 [handlers]
 keys=consoleHandler
@@ -10,6 +10,12 @@ keys=normalFormatter
 [logger_root]
 level=INFO
 handlers=consoleHandler
+
+[logger_routers]
+level=DEBUG
+handlers=consoleHandler
+qualname=routers
+propagate=0
 
 [logger_app]
 level=DEBUG
