--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,17 +11,16 @@ services:
 
     depends_on:
       - db
+    env_file:
+      - '.env'
 
   db:
     image: "postgres:16"
 
-    env_file:
-      - './src/.env'
-
     environment:
-      - POSTGRES_DB=DB_NAME
-      - POSTGRES_USER=DB_USER
-      - POSTGRES_PASSWORD=DB_PASSWORD
+      - POSTGRES_DB=${DB_NAME}
+      - POSTGRES_USER=${DB_USER}
+      - POSTGRES_PASSWORD=${DB_PASSWORD}
 
     ports:
       - "5435:5432"
