Clean architecture; jwt, blacklist, exceptions

--- a/src/logging.conf
+++ b/src/logging.conf
@@ -1,5 +1,5 @@
 [loggers]
-keys=root,app, routers
+keys=root, routes
 
 [handlers]
 keys=consoleHandler
@@ -11,16 +11,10 @@ keys=normalFormatter
 level=INFO
 handlers=consoleHandler
 
-[logger_routers]
+[logger_routes]
 level=DEBUG
 handlers=consoleHandler
-qualname=routers
-propagate=0
-
-[logger_app]
-level=DEBUG
-handlers=consoleHandler
-qualname=app
+qualname=routes
 propagate=0
 
 [handler_consoleHandler]
