--- a/.env
+++ b/.env
@@ -1,12 +1,11 @@
-# ENV_STATE="DEVELOPMENT"
-
-DB_NAME=UserManagment
+ENV_STATE="DEVELOPMENT"
+DB_NAME="UserManagment"
 DB_USER=root
 DB_PASSWORD=abfkrf2003
 
-# DB_HOST=db
-# DB_PORT=5432
-DB_HOST=localhost
+DB_HOST=db
 DB_PORT=5432
+# DB_HOST=localhost
+# DB_PORT=5432
 
 JWT_SECRET=cf6b56353597d5a0cd253b57b5cea25fd689f433ce3b40f5
