--- a/.env
+++ b/.env
@@ -1,10 +1,15 @@
 ENV_STATE="DEVELOPMENT"
-DB_NAME="UserManagment"
+DB_NAME=UserManagment
 DB_USER=root
 DB_PASSWORD=abfkrf2003
 
 DB_HOST=db
 DB_PORT=5432
+
+REDIS_HOST=redis
+REDIS_PORT=6380
+# REDIS_HOST=localhost
+# REDIS_PORT=6379
 # DB_HOST=localhost
 # DB_PORT=5432
 
