--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
 
     depends_on:
       - db
+      - redis
     env_file:
       - '.env'
 
@@ -27,3 +28,16 @@ services:
 
     volumes:
       - ./data:/var/lib/postgresql/data
+
+  redis:
+    image: "redis:7"
+
+    ports:
+      - "6380:6379"
+
+    volumes:
+      - ./redis-data:/var/lib/redis
+      - ./redis.conf:/usr/local/etc/redis/redis.conf
+
+#    environment:
+#      - REDIS_PASSWORD=${DB_PASSWORD}
