--- a/requirements.txt
+++ b/requirements.txt
@@ -26,14 +26,15 @@ postgres==4.0
 pre-commit==3.5.0; python_version >= '3.8'
 psycopg2-binary==2.9.9; python_version >= '3.7'
 psycopg2-pool==1.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
-pydantic[email]==2.4.2; python_version >= '3.7'
-pydantic-core==2.10.1; python_version >= '3.7'
+pydantic[email]==2.5.0; python_version >= '3.7'
+pydantic-core==2.14.1; python_version >= '3.7'
 pydantic-settings==2.0.3; python_version >= '3.7'
 pyjwt==2.8.0; python_version >= '3.7'
 pytest==7.4.3; python_version >= '3.7'
 pytest-asyncio==0.21.1; python_version >= '3.7'
 python-dotenv==1.0.0; python_version >= '3.8'
 pyyaml==6.0.1; python_version >= '3.6'
+redis==5.0.1; python_version >= '3.7'
 setuptools==68.2.2; python_version >= '3.8'
 sniffio==1.3.0; python_version >= '3.7'
 sqlalchemy==2.0.20; python_version >= '3.7'
