Add tests, s3, ses

--- a/.env
+++ b/.env
@@ -8,9 +8,14 @@ DB_PORT=5432
 
 REDIS_HOST=redis
 REDIS_PORT=6380
+
+AWS_ACCESS_KEY_ID=test
+AWS_SECRET_ACCESS_KEY=test
+
 # REDIS_HOST=localhost
 # REDIS_PORT=6379
 # DB_HOST=localhost
 # DB_PORT=5432
 
 JWT_SECRET=cf6b56353597d5a0cd253b57b5cea25fd689f433ce3b40f5
+BUCKET_NAME=user-management-b4714add-d7b8-40dd-9158-21bd006d686f
