--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,3 +41,15 @@ services:
 
 #    environment:
 #      - REDIS_PASSWORD=${DB_PASSWORD}
+
+  localstack:
+    container_name: "localstack"
+    image: localstack/localstack
+    ports:
+      - "127.0.0.1:4566:4566"            # LocalStack Gateway
+      - "127.0.0.1:4510-4559:4510-4559"  # external services port range
+    environment:
+      - DOCKER_HOST=unix:///var/run/docker.sock
+    volumes:
+      - "./localstack/volume:/var/lib/localstack"
+      - "/var/run/docker.sock:/var/run/docker.sock"
