Add test, logger, resonse model

--- a/src/logging.conf
+++ b/src/logging.conf
@@ -1,5 +1,5 @@
 [loggers]
-keys=root, routes
+keys=root, auth, repositories, localstack
 
 [handlers]
 keys=consoleHandler
@@ -11,10 +11,22 @@ keys=normalFormatter
 level=INFO
 handlers=consoleHandler
 
-[logger_routes]
+[logger_auth]
 level=DEBUG
 handlers=consoleHandler
-qualname=routes
+qualname=auth
+propagate=0
+
+[logger_repositories]
+level=DEBUG
+handlers=consoleHandler
+qualname=repositories
+propagate=0
+
+[logger_localstack]
+level=DEBUG
+handlers=consoleHandler
+qualname=localstack
 propagate=0
 
 [handler_consoleHandler]
