Add group relationship, fix pre-commit

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,7 +15,7 @@ repos:
     rev: v2.2.1
     hooks:
     -   id: autoflake
-        args: [--remove-all-unused-imports, --in-place]
+        args: ["--remove-all-unused-imports", "--exclude", "src/main.py", "--in-place"]
 
 -   repo: https://github.com/pycqa/isort
     rev: 5.12.0
