--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ asyncpg==0.29.0; python_full_version >= '3.8.0'
 attrs==23.1.0; python_version >= '3.7'
 boto3==1.28.64; python_version >= '3.7'
 botocore==1.31.64; python_version >= '3.7'
+certifi==2023.11.17; python_version >= '3.6'
 cfgv==3.4.0; python_version >= '3.8'
 click==8.1.7; python_version >= '3.7'
 distlib==0.3.7
@@ -21,7 +22,9 @@ filelock==3.13.1; python_version >= '3.8'
 frozenlist==1.4.0; python_version >= '3.8'
 greenlet==3.0.1; platform_machine == 'aarch64' or (platform_machine == 'ppc64le' or (platform_machine == 'x86_64' or (platform_machine == 'amd64' or (platform_machine == 'AMD64' or (platform_machine == 'win32' or platform_machine == 'WIN32')))))
 h11==0.14.0; python_version >= '3.7'
-identify==2.5.31; python_version >= '3.8'
+httpcore==1.0.2; python_version >= '3.8'
+httpx==0.25.1; python_version >= '3.8'
+identify==2.5.32; python_version >= '3.8'
 idna==3.4; python_version >= '3.5'
 iniconfig==2.0.0; python_version >= '3.7'
 jmespath==1.0.1; python_version >= '3.7'
@@ -31,25 +34,26 @@ multidict==6.0.4; python_version >= '3.7'
 nodeenv==1.8.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6'
 packaging==23.2; python_version >= '3.7'
 passlib==1.7.4
-platformdirs==3.11.0; python_version >= '3.7'
+platformdirs==4.0.0; python_version >= '3.7'
 pluggy==1.3.0; python_version >= '3.8'
 postgres==4.0
 pre-commit==3.5.0; python_version >= '3.8'
 psycopg2-binary==2.9.9; python_version >= '3.7'
 psycopg2-pool==1.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
-pydantic[email]==2.5.1; python_version >= '3.7'
-pydantic-core==2.14.3; python_version >= '3.7'
+pydantic[email]==2.5.2; python_version >= '3.7'
+pydantic-core==2.14.5; python_version >= '3.7'
 pydantic-settings==2.0.3; python_version >= '3.7'
 pyjwt==2.8.0; python_version >= '3.7'
 pytest==7.4.3; python_version >= '3.7'
 pytest-asyncio==0.21.1; python_version >= '3.7'
+pytest-mock==3.12.0; python_version >= '3.8'
 python-dateutil==2.8.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 python-dotenv==1.0.0; python_version >= '3.8'
 python-multipart==0.0.6; python_version >= '3.7'
 pyyaml==6.0.1; python_version >= '3.6'
 redis==5.0.1; python_version >= '3.7'
 s3transfer==0.7.0; python_version >= '3.7'
-setuptools==68.2.2; python_version >= '3.8'
+setuptools==69.0.2; python_version >= '3.8'
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 sniffio==1.3.0; python_version >= '3.7'
 sqlalchemy==2.0.20; python_version >= '3.7'
@@ -57,6 +61,6 @@ starlette==0.27.0; python_version >= '3.7'
 typing-extensions==4.8.0; python_version >= '3.8'
 urllib3==2.0.7; python_version >= '3.10'
 uvicorn==0.24.0.post1; python_version >= '3.8'
-virtualenv==20.24.6; python_version >= '3.7'
+virtualenv==20.24.7; python_version >= '3.7'
 wrapt==1.16.0; python_version >= '3.6'
-yarl==1.9.2; python_version >= '3.7'
+yarl==1.9.3; python_version >= '3.7'
