--- a/.github/workflows/user_management_ci_cd.yml
+++ b/.github/workflows/user_management_ci_cd.yml
@@ -10,6 +10,20 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    services:
+      postgres:
+        image: postgres
+        env:
+          POSTGRES_USER: test
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: TestUserManagement
+          
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
     steps:
       - uses: actions/checkout@v2
     
@@ -32,4 +46,15 @@ jobs:
       - name: Test with pytest
         working-directory: ./src
         run: python -m pytest tests/units
+
+      - name: Integration tests
+        working-directory: ./src
+        run: python -m pytest tests/integration
+        env: 
+          DB_USER: test
+          DB_PASSWORD: test
+          DB_HOST: postgres
+          DB_PORT: 5432
+          DB_NAME: TestUserManagement
+    
       
