--- a/.github/workflows/user_management_ci_cd.yml
+++ b/.github/workflows/user_management_ci_cd.yml
@@ -3,8 +3,8 @@ name: User Managment CI CD
 on:
   push:
     branches: ["dev", "feature"]
-  pull_request:
-    branches: "dev"
+  # pull_request:
+    # branches: "dev"
 
 jobs:
   build:
@@ -15,7 +15,7 @@ jobs:
         image: postgres
         env:
           POSTGRES_USER: test
-          POSTGRES_PASSWORD: postgres
+          POSTGRES_PASSWORD: test
           POSTGRES_DB: TestUserManagement
           
         options: >-
