--- a/.github/workflows/user_management_ci_cd.yml
+++ b/.github/workflows/user_management_ci_cd.yml
@@ -17,6 +17,9 @@ jobs:
           POSTGRES_USER: test
           POSTGRES_PASSWORD: test
           POSTGRES_DB: TestUserManagement
+        ports:
+          # Maps tcp port 5432 on service container to the host
+          - 5432:5432
           
         options: >-
           --health-cmd pg_isready
@@ -53,8 +56,6 @@ jobs:
         env: 
           DB_USER: test
           DB_PASSWORD: test
-          DB_HOST: postgres
+          DB_HOST: localhost
           DB_PORT: 5432
           DB_NAME: TestUserManagement
-    
-      
