--- a/.github/workflows/user_management_ci_cd.yml
+++ b/.github/workflows/user_management_ci_cd.yml
@@ -25,8 +25,8 @@ jobs:
 
         - name: 'Build Inventory Image'
           run: |
-            docker build . --tag ghcr.io/BystrovaV/user-management:latest
-            docker push ghcr.io/BystrovaV/user-management:latest
+            docker build .
+            docker push ghcr.io/BystrovaV/user_management:latest
     
   test:
     runs-on: ubuntu-latest
