--- a/.github/workflows/user_management_ci_cd.yml
+++ b/.github/workflows/user_management_ci_cd.yml
@@ -30,6 +30,17 @@ jobs:
     
   test:
     runs-on: ubuntu-latest
+    container:
+        image: ghcr.io/bystrovav/user_management:latest
+        credentials:
+           username: ${{github.actor}}
+           password: ${{secrets.GHCR}}
+        env: 
+          DB_USER: test
+          DB_PASSWORD: test
+          DB_HOST: localhost
+          DB_PORT: 5432
+          DB_NAME: TestUserManagement
 
     services:
       postgres:
@@ -56,11 +67,14 @@ jobs:
         with:
           python-version: 3.12
 
-      - name: Install dependencies
+      - name: Install Linters
         run: |
-          python -m pip install --upgrade pip
           python -m pip install black pytest
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      # - name: Install dependencies
+      # run: |
+      #   python -m pip install --upgrade pip
+      #   python -m pip install black pytest
+      #   if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       - name: Lint with Black
         run: |
@@ -68,15 +82,15 @@ jobs:
           black --check src
 
       - name: Test with pytest
-        working-directory: ./src
+        # working-directory: ./src
         run: python -m pytest tests/units
 
       - name: Integration tests
-        working-directory: ./src
+        # working-directory: ./src
         run: python -m pytest tests/integration
-        env: 
-          DB_USER: test
-          DB_PASSWORD: test
-          DB_HOST: localhost
-          DB_PORT: 5432
-          DB_NAME: TestUserManagement
+        # env: 
+        #   DB_USER: test
+        #   DB_PASSWORD: test
+        #   DB_HOST: localhost
+        #   DB_PORT: 5432
+        #   DB_NAME: TestUserManagement
