--- a/Pipfile
+++ b/Pipfile
@@ -24,10 +24,12 @@ aioboto3 = "==12.0.0"
 python-multipart = "*"
 httpx = "*"
 pytest-mock = "*"
+pika = "==1.3.2"
 
 [dev-packages]
 black = "==23.10.1"
 isort = "==5.12.0"
+coverage = "*"
 
 [requires]
 python_version = "3.12"
