--- a/requirements.txt
+++ b/requirements.txt
@@ -23,9 +23,9 @@ frozenlist==1.4.0; python_version >= '3.8'
 greenlet==3.0.1; platform_machine == 'aarch64' or (platform_machine == 'ppc64le' or (platform_machine == 'x86_64' or (platform_machine == 'amd64' or (platform_machine == 'AMD64' or (platform_machine == 'win32' or platform_machine == 'WIN32')))))
 h11==0.14.0; python_version >= '3.7'
 httpcore==1.0.2; python_version >= '3.8'
-httpx==0.25.1; python_version >= '3.8'
+httpx==0.25.2; python_version >= '3.8'
 identify==2.5.32; python_version >= '3.8'
-idna==3.4; python_version >= '3.5'
+idna==3.6; python_version >= '3.5'
 iniconfig==2.0.0; python_version >= '3.7'
 jmespath==1.0.1; python_version >= '3.7'
 mako==1.3.0; python_version >= '3.8'
@@ -34,6 +34,7 @@ multidict==6.0.4; python_version >= '3.7'
 nodeenv==1.8.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6'
 packaging==23.2; python_version >= '3.7'
 passlib==1.7.4
+pika==1.3.2; python_version >= '3.7'
 platformdirs==4.0.0; python_version >= '3.7'
 pluggy==1.3.0; python_version >= '3.8'
 postgres==4.0
