--- a/.github/workflows/user_management_ci_cd.yml
+++ b/.github/workflows/user_management_ci_cd.yml
@@ -89,5 +89,5 @@ jobs:
         #   DB_USER: test
         #   DB_PASSWORD: test
         #   DB_HOST: localhost
-          DB_PORT: 5432
-          DB_NAME: TestUserManagement
+          # DB_PORT: 5432
+          # DB_NAME: TestUserManagement
